--- a/app/src/main/res/layout/firma_solicitante.xml
+++ b/app/src/main/res/layout/firma_solicitante.xml
@@ -3,16 +3,24 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/rlative">
 
+
     <LinearLayout
         android:layout_height="wrap_content"
         android:id="@+id/linearLayout2"
         android:layout_width="wrap_content">
-
+      <!--  <TextView
+            android:id="@+id/permisos"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/autorizacion"/>-->
         <Button
             android:id="@+id/cancel"
             android:layout_height="match_parent"
@@ -90,6 +98,6 @@
         android:layout_below="@id/tableLayout"
         android:layout_width="match_parent"
         android:orientation="horizontal" />
-
     </RelativeLayout>
+
 </LinearLayout>
