--- a/app/src/main/res/layout/informacion_laboral.xml
+++ b/app/src/main/res/layout/informacion_laboral.xml
@@ -619,19 +619,27 @@
                 android:layout_alignParentEnd="true"
                 android:hint="@string/comments" />
 
+            <TextView
+                android:id="@+id/lblPeriodicidad"
+                android:layout_below="@+id/txtFax"
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:text="Peridoicidad:" />
+
             <RadioGroup
                 android:id="@+id/rgPeriodicidad"
-                android:layout_below="@id/txtFax"
+                android:layout_below="@id/lblPeriodicidad"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="vertical">
                 <RadioButton
                     android:id="@+id/mesualLaboral"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginStart="30dp"
                     android:checked="true"
                     android:text="mensual"/>
                 <RadioButton
