--- a/app/src/main/res/layout/pantalla_principal.xml
+++ b/app/src/main/res/layout/pantalla_principal.xml
@@ -35,6 +35,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
             </FrameLayout>
+
         </LinearLayout>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/view_pager"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/nombre" />
     </TabHost>
 </LinearLayout>
