--- a/app/src/main/res/layout/referencias_personales.xml
+++ b/app/src/main/res/layout/referencias_personales.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/btnGuardar"
+        android:id="@+id/btnGuardarReferencias"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
