--- a/app/src/main/res/layout/datos_conyuge.xml
+++ b/app/src/main/res/layout/datos_conyuge.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
     android:paddingBottom="10dp"
@@ -21,7 +22,7 @@
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/btnGuardar"
+        android:layout_above="@+id/btnGuardarDatosConyuge"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
