--- a/app/src/main/res/layout/referencias_personales.xml
+++ b/app/src/main/res/layout/referencias_personales.xml
@@ -21,7 +21,7 @@
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/btnGuardar"
+        android:layout_above="@+id/btnGuardarReferencias"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
